# GameCurveProbe

./: .gitignore  GameCurveProbe.spec  README.md  pyproject.toml
build_tools/: __init__.py  pyinstaller_support.py
docs/: USER_GUIDE.md
scripts/: build-exe.ps1
src/gamecurveprobe/: __init__.py  __main__.py  app.py  models.py
src/gamecurveprobe/backends/capture/: __init__.py  base.py  dxcam_backend.py  dxcam_monitor_backend.py  stub.py
src/gamecurveprobe/backends/controller/: __init__.py  base.py  stub.py  vgamepad_backend.py
src/gamecurveprobe/gui/: hotkeys.py  main_window.py  notifications.py  run_worker.py
src/gamecurveprobe/gui/widgets/: curve_preview.py  live_preview.py
src/gamecurveprobe/services/: http_server.py  idle_noise_calibration_runner.py  inner_deadzone_calibration_service.py  motion_sampler.py  session_service.py  steady_probe_runner.py  window_service.py  yaw360_calibration_runner.py
src/gamecurveprobe/vision/: __init__.py  motion_estimator.py
tests/: test_app.py  test_pyinstaller_support.py
tests/backends/capture/: test_dxcam_backend.py  test_dxcam_monitor_backend.py
tests/backends/controller/: test_vgamepad_backend.py
tests/gui/: test_hotkeys.py  test_notifications.py  test_steady_worker.py
tests/services/: test_http_server.py  test_inner_deadzone_calibration_service.py  test_motion_sampler.py  test_session_service.py  test_steady_probe_runner.py  test_window_service.py  test_yaw360_calibration_runner.py
tests/vision/: test_motion_estimator.py
